@@ -4,9 +4,10 @@ import { Google } from 'expo'
 
 import { ANDROID_CLIENT, IOS_CLIENT } from 'react-native-dotenv'
 
-import Storage from '../modules/AsyncStorage'
+import Storage, { AUTH_TOKEN, USER_ID } from '../modules/AsyncStorage'
 import { LoginConnector } from '../connectors/LoginConnector'
 import { Styles } from '../Styles'
+import { BackendConnector } from '../connectors/BackendConnector'
 
 class LoginScreen extends Component {
 
@@ -25,13 +26,16 @@ class LoginScreen extends Component {
       if (googleLoginResponse.type === 'success') {
         const response = await LoginConnector.login(googleLoginResponse.idToken)
         const token = response.headers.authorization
+        const userId = response.headers['x-user-id']
 
         if (token) {
           console.log('calling store')
-          console.log(token)
-          await Storage.storeItem(token)
+          await Storage.storeItem(AUTH_TOKEN, token)
+          await Storage.storeItem(USER_ID, userId)
+          BackendConnector.token = token
+          BackendConnector.userId = userId
           console.log('called store')
-          this.props.navigation.navigate('App', { token: token })
+          this.props.navigation.navigate('App')
         }
       }
 
